# leveret

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
src/scout/: __init__.py  __main__.py  _logging.py  browser.py  cli.py  errors.py  inputs.py  scraper.py
src/scout/agent/: __init__.py  bridge.py  checkpoint.py  console.py  context.py  demo_overlay.py  llm.py  loop.py  param_detector.py  patchright_guide.md  planner.py  prompt.py  requirements.py  selector_extractor.py  show_page_context.py  summarizer.py  timeout_predict.py  tools.py  trace.py  validator.py  wrapper.py
src/scout/autofix/: __init__.py  antibot.py  classifier.py  content_check.py  decision.py  diagnosis.py  fingerprint.py  page_verifier.py  stability.py  types.py
src/scout/page/: __init__.py  classes.py  converter.py  extract.py  interactive.py  manager.py  patterns.py  sanitize.py  sectioner.py  zoom.py
src/scout/runtime/: __init__.py  environment.py  sandbox.py
src/scout/schema/: __init__.py  compiler.py  formatter.py  nodes.py  parse.py  prompt.py  tolerance.py  types.py  validate.py
tests/: test_browser_config.py  test_inputs.py  test_round3_features.py  test_sandbox.py  test_scraper_autofix.py  test_scraper_constructor.py  test_scraper_context.py  test_scraper_persistence.py  test_scraper_run.py
tests/agent/: test_compression.py  test_context.py  test_param_detector.py  test_progressive_compaction.py  test_prompt_inputs.py  test_prompt_schema.py  test_schema_gate.py  test_selector_extractor.py  test_show_page_context.py  test_timeout_from_traces.py  test_timeout_predict.py  test_wrapper_signals.py
tests/autofix/: battle_server.py  conftest.py  local_server.py  test_antibot.py  test_battle.py  test_classifier.py  test_decision.py  test_detection_integration.py  test_diagnosis.py  test_fingerprint.py  test_messages.py  test_page_verifier.py  test_stability.py
tests/autofix/fixtures/antibot/: akamai_block.headers.json  akamai_block.html  aws_waf.headers.json  clean_real_page.html  cloudflare_challenge.headers.json  cloudflare_challenge.html  cloudflare_error_1020.html  datadome_captcha.headers.json  datadome_captcha.html  generic_access_denied.html  generic_hcaptcha.html  generic_recaptcha.html  imperva_block.headers.json  imperva_block.html  kasada_challenge.headers.json  kasada_challenge.html  legitimate_large_page.html  perimeterx_challenge.headers.json  perimeterx_challenge.html  script_only_shell.html
tests/autofix/fixtures/errors/: A_import_error.json  A_indentation_error.json  A_module_not_found.json  A_syntax_error.json  B_attribute_error_none.json  B_empty_output.json  B_index_error.json  B_js_reference_error.json  B_js_type_error.json  B_key_error.json  B_type_error.json  B_value_error.json  C_cert_invalid.json  C_connection_refused.json  C_dns_not_resolved.json  C_empty_response.json  C_navigation_timeout.json  C_too_many_redirects.json  D_click_timeout.json  D_fill_timeout.json  D_locator_wait_for.json  D_wait_for_function.json  D_wait_for_selector.json  E_context_destroyed.json  E_dialog_blocking.json  E_frame_detached.json  E_not_visible.json  E_pointer_intercept.json  E_strict_mode.json  F1_page_crash.json  F2_subprocess_timeout.json  F3_browser_not_found.json  G_schema_empty_list.json  G_schema_missing_field.json  G_schema_wrong_type.json
tests/page/: test_converter.py  test_interactive.py
tests/schema/: test_compiler.py  test_complex_scenarios.py  test_parse.py  test_prompt.py  test_tolerance.py  test_types.py  test_validate.py
