[project]
name = "scout"
version = "0.1.0"
description = "AI agent that writes web scraping scripts — generate once, run forever"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["scraping", "web-scraping", "ai", "browser", "playwright", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html-sanitizer>=2.6.0",
    "patchright>=1.58.2",
    "playwright>=1.58.0",
    "pydantic-ai-slim[anthropic,openai,google,groq]>=1.84.0",
    "python-dotenv>=1.2.2",
    "RestrictedPython>=7.0",
]

[project.optional-dependencies]
slim = []  # Anthropic only (included in base)
mistral = ["pydantic-ai-slim[mistral]>=1.84.0"]
cohere = ["pydantic-ai-slim[cohere]>=1.84.0"]
bedrock = ["pydantic-ai-slim[bedrock]>=1.84.0"]
all = [
    "pydantic-ai-slim[mistral]>=1.84.0",
    "pydantic-ai-slim[cohere]>=1.84.0",
    "pydantic-ai-slim[bedrock]>=1.84.0",
]

[tool.setuptools.package-data]
scout = ["agent/*.md", "agent/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
